# docs/swagger.json
@@ -7,35 +7,8 @@
         "version": "1.0"
     },
     "paths": {
-        "/api/ping": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Служебные"
-                ],
-                "summary": "Пинг сервиса",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/thttp.ResponseWithDetails-string"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/users/create": {
+        "/api/employee/create": {
             "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -43,9 +16,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Users"
+                    "Employee"
                 ],
-                "summary": "Созданеие пользователя",
+                "summary": "Создание работника",
                 "parameters": [
                     {
                         "description": "Данные пользователя",
@@ -53,7 +26,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handler.createUserRequest"
+                            "$ref": "#/definitions/handler.createEmployeeRequest"
                         }
                     }
                 ],
@@ -64,13 +37,8 @@
                 }
             }
         },
-        "/api/users/delete/{userId}": {
+        "/api/employee/delete/{employeeId}": {
             "delete": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -78,14 +46,14 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Users"
+                    "Employee"
                 ],
-                "summary": "Удаление пользователя",
+                "summary": "Удаление работника",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Идентификатор пользователя",
-                        "name": "userId",
+                        "description": "Идентификатор работника",
+                        "name": "employeeId",
                         "in": "path",
                         "required": true
                     }
@@ -112,13 +80,8 @@
                 }
             }
         },
-        "/api/users/list/department/{depName}": {
+        "/api/employee/list/department/{depName}": {
             "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -126,9 +89,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Users"
+                    "Employees"
                 ],
-                "summary": "Получение пользователей по отделу",
+                "summary": "Получение работников по отделу",
                 "parameters": [
                     {
                         "type": "string",
@@ -142,7 +105,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/thttp.ResponseWithDetails-handler_listUsersByDepartmentResponse"
+                            "$ref": "#/definitions/thttp.ResponseWithDetails-handler_listEmployeesByDepartmentResponse"
                         }
                     },
                     "400": {
@@ -160,13 +123,8 @@
                 }
             }
         },
-        "/api/users/list/{companyId}": {
+        "/api/employee/list/{companyId}": {
             "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -174,9 +132,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Users"
+                    "Employee"
                 ],
-                "summary": "Получение пользователей по id компании",
+                "summary": "Получение работников по id компании",
                 "parameters": [
                     {
                         "type": "string",
@@ -190,7 +148,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/thttp.ResponseWithDetails-handler_listUsersByCompanyIdResponse"
+                            "$ref": "#/definitions/thttp.ResponseWithDetails-handler_getListEmployeesByCompanyIdResponse"
                         }
                     },
                     "400": {
@@ -208,7 +166,7 @@
                 }
             }
         },
-        "/api/users/update/{userId}": {
+        "/api/employee/update/{employeeId}": {
             "put": {
                 "consumes": [
                     "application/json"
@@ -217,14 +175,14 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Users"
+                    "Employee"
                 ],
-                "summary": "Изменение данных пользователя",
+                "summary": "Изменение данных работника",
                 "parameters": [
                     {
                         "type": "string",
                         "description": "Идентификатор пользователя",
-                        "name": "userId",
+                        "name": "employeeId",
                         "in": "path",
                         "required": true
                     },
@@ -234,7 +192,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handler.updateUserRequest"
+                            "$ref": "#/definitions/handler.updateEmployeeRequest"
                         }
                     }
                 ],
@@ -242,7 +200,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/thttp.ResponseWithDetails-handler_updateUserResponse"
+                            "$ref": "#/definitions/thttp.ResponseWithDetails-handler_updateEmployeeResponse"
                         }
                     },
                     "400": {
@@ -265,10 +223,32 @@
                     }
                 }
             }
+        },
+        "/api/ping": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Служебные"
+                ],
+                "summary": "Пинг сервиса",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/thttp.ResponseWithDetails-string"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
-        "handler.createUserRequest": {
+        "handler.createEmployeeRequest": {
             "type": "object",
             "required": [
                 "company_id",
@@ -276,8 +256,8 @@
                 "department_phone",
                 "id",
                 "name",
-                "passport_name",
                 "passport_number",
+                "passport_type",
                 "phone",
                 "surname"
             ],
@@ -302,13 +282,13 @@
                     "type": "string",
                     "example": "Ivan"
                 },
-                "passport_name": {
-                    "type": "string",
-                    "example": "Russian passport"
-                },
                 "passport_number": {
                     "type": "string",
                     "example": "1122 112233"
+                },
+                "passport_type": {
+                    "type": "string",
+                    "example": "Russian passport"
                 },
                 "phone": {
                     "type": "string",
@@ -320,7 +300,7 @@
                 }
             }
         },
-        "handler.listUsersByCompanyIdElement": {
+        "handler.getListEmployeesByCompanyIdElement": {
             "type": "object",
             "properties": {
                 "company_id": {
@@ -338,10 +318,10 @@
                 "name": {
                     "type": "string"
                 },
-                "passport_name": {
+                "passport_number": {
                     "type": "string"
                 },
-                "passport_number": {
+                "passport_type": {
                     "type": "string"
                 },
                 "phone": {
@@ -352,7 +332,7 @@
                 }
             }
         },
-        "handler.listUsersByDepartmentElement": {
+        "handler.listEmployeesByDepartmentElement": {
             "type": "object",
             "properties": {
                 "company_id": {
@@ -370,10 +350,10 @@
                 "name": {
                     "type": "string"
                 },
-                "passport_name": {
+                "passport_number": {
                     "type": "string"
                 },
-                "passport_number": {
+                "passport_type": {
                     "type": "string"
                 },
                 "phone": {
@@ -384,7 +364,7 @@
                 }
             }
         },
-        "handler.updateUserRequest": {
+        "handler.updateEmployeeRequest": {
             "type": "object",
             "properties": {
                 "company_id": {
@@ -399,10 +379,10 @@
                 "name": {
                     "type": "string"
                 },
-                "passport_name": {
+                "passport_number": {
                     "type": "string"
                 },
-                "passport_number": {
+                "passport_type": {
                     "type": "string"
                 },
                 "phone": {
@@ -413,7 +393,7 @@
                 }
             }
         },
-        "handler.updateUserResponse": {
+        "handler.updateEmployeeResponse": {
             "type": "object",
             "required": [
                 "id"
@@ -434,10 +414,10 @@
                 "name": {
                     "type": "string"
                 },
-                "passport_name": {
+                "passport_number": {
                     "type": "string"
                 },
-                "passport_number": {
+                "passport_type": {
                     "type": "string"
                 },
                 "phone": {
@@ -478,7 +458,7 @@
                 "result": {}
             }
         },
-        "thttp.ResponseWithDetails-handler_listUsersByCompanyIdResponse": {
+        "thttp.ResponseWithDetails-handler_getListEmployeesByCompanyIdResponse": {
             "type": "object",
             "properties": {
                 "description": {
@@ -493,12 +473,12 @@
                 "result": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/handler.listUsersByCompanyIdElement"
+                        "$ref": "#/definitions/handler.getListEmployeesByCompanyIdElement"
                     }
                 }
             }
         },
-        "thttp.ResponseWithDetails-handler_listUsersByDepartmentResponse": {
+        "thttp.ResponseWithDetails-handler_listEmployeesByDepartmentResponse": {
             "type": "object",
             "properties": {
                 "description": {
@@ -513,12 +493,12 @@
                 "result": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/handler.listUsersByDepartmentElement"
+                        "$ref": "#/definitions/handler.listEmployeesByDepartmentElement"
                     }
                 }
             }
         },
-        "thttp.ResponseWithDetails-handler_updateUserResponse": {
+        "thttp.ResponseWithDetails-handler_updateEmployeeResponse": {
             "type": "object",
             "properties": {
                 "description": {
@@ -531,7 +511,7 @@
                     "type": "boolean"
                 },
                 "result": {
-                    "$ref": "#/definitions/handler.updateUserResponse"
+                    "$ref": "#/definitions/handler.updateEmployeeResponse"
                 }
             }
         },
