# entity/employee.go
@@ -1,6 +1,6 @@
 package entity
 
-type User struct {
+type Employee struct {
 	Id         int
 	Name       string
 	Surname    string
@@ -8,14 +8,4 @@ type User struct {
 	CompanyId  int
 	Passport   Passport
 	Department Department
-}
-
-type Passport struct {
-	Name   string
-	Number string
-}
-
-type Department struct {
-	Name  string
-	Phone string
 }
